<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="divide_zero">Cannot divide by zero</string>
    <string name="null_data">Write something into the fields </string>
    <string name="wrong_format">Check input data for correctness</string>
    <string name="wrong_operation">We can calculate only "+', "-", "/", "*"</string>
    <string name="input_first">Input first number</string>
    <string name="input_second">Input second number</string>
    <string name="input_operation">Input operation</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
</resources>