<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/number_1_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/input_first"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/number_1_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number"
        android:layout_marginHorizontal="10dp"
        />
    <TextView
        android:id="@+id/operationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/input_operation"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/operationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="text"
        android:layout_marginHorizontal="10dp"
        />
    <TextView
        android:id="@+id/number_2_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/input_second"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/number_2_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number"
        android:layout_marginHorizontal="10dp"
        />
    <Button
        android:id="@+id/calculateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:textColor="@color/black"
        android:background="@color/yellow"
        android:textSize="15dp"
        android:layout_marginHorizontal= "10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/result"
        android:layout_margin="10dp"
        android:textStyle="bold"
        />

</LinearLayout>